<resources>
    <string name="app_name">Gestion de bureaux de change</string>
    <string name="login">Se connecter</string>
    <string name="bureau">Bureaux</string>
    <string name="users">Utilisateurs</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="bureau_name">Bureau: %1$s</string>
    <string name="error">Erreur Inattendue</string>
    <string name="empty_bureaux">Pas de bureaux</string>
    <string name="Cancel">Annuler</string>
    <string name="Yes">Oui</string>
    <string name="delete_bureau_title">Supprimer ?</string>
    <string name="delete_bureau_message">Attention vous etes sur le point de supprimer un bureau !</string>
    <string name="delete_user_message">Attention vous etes sur le point de supprimer un utilisateur !</string>
    <string name="transactions">Transactions</string>
    <string name="ajouter_un_bureau">Ajouter un bureau</string>
    <string name="update_un_bureau">Modifier les informations du bureau</string>
    <string name="name">Nom</string>
    <string name="ajouter">Ajouter</string>
    <string name="added_bureau">Bureau Ajoutée avec succès</string>
    <string name="added_user">Utilisateur Ajoutée avec succès</string>
    <string name="stock_euro">Stock euro: %1$s</string>
    <string name="stock_dollar">Stock dollar: %1$s</string>
    <string name="bureau_dirham">Stock dirham: %1$s</string>
    <string name="empty_transactions">Pas de transactions</string>
    <string name="empty_desks">Pas de bureaux</string>
    <string name="empty_users">Pas de utilisateurs</string>
    <string name="id">id: %1$s</string>
    <string name="montant">%1$s %2$s</string>
    <string name="euro">Euro :</string>
    <string name="stock">stock</string>
    <string name="delete_user">Supprimer un utilisateur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Ajouter un utilisateur</string>
    <string name="associate_to_desk">Associer a un bureau</string>
    <string name="associate_to_new_desk">Associer a un nouveau bureau</string>
    <string name="phone">Numero du telephone</string>
    <string name="desk">Bureau</string>
    <string name="email">Email</string>
    <string name="user_name">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="retype_password">Retapez le mot de passe</string>
    <string name="obligatory">obligratoire*</string>

    <string name="name_placeholder"><b>Utilisateur:</b> %1$s</string>
    <string name="user_name_placeholder"><b>Nom d\'Utilisateur:</b> %1$s</string>
    <string name="phone_placeholder"><b>Numero du telephone:</b> %1$s</string>
    <string name="email_placeholder"><b>Email:</b> %1$s</string>
    <string name="modify">Modifier les données</string>
    <string name="update_name">Modifier le nom</string>
    <string name="update_password">Changer le mot de passe</string>
    <string name="delete">Supprimer</string>
    <string name="update">Modifier les informations</string>
    <string name="update_credentials">Modifier les données de connexion</string>
    <string name="changer_le_mot_de_passe">Changer le mot de passe</string>
    <string name="error_changing_password">Erreur de changement de mot de passe</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="re_taper_le_nouveau_mot_de_passe">Re-taper le nouveau mot de passe</string>
    <string name="update_password_success">Mot de passe modifié avec success</string>
    <string name="cookie_token">cookie_token</string>
    <string name="stock_string">Stock</string>
    <string name="add_bureau_title">Ajouter</string>
    <string name="update_bureau_title">Modifier</string>
    <string name="add_bureau_message">Vous etes sur des informations entrées ?</string>
    <string name="update_bureau_message">Vous etes sur des informations entrées ?</string>
    <string name="ajouter_un_admin">Ajouter un admin</string>
    <string name="logout">Se deconnecter</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="history_des_transactions">history des transactions</string>

</resources>